<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_catalogue_people"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_catalogue_films"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/films"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_catalogue_starships"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starship"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_catalogue_vehicles"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicles"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_catalogue_species"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_catalogue_planet"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planet"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </androidx.cardview.widget.CardView>



</LinearLayout>